--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 
   </head>
   <body>
+    <div class="content"></div>
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
