--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,10 @@
 
   </head>
   <body>
-    <div class="content"></div>
+    <div class="content">
+      <a href="#prev" class="button prev"></a>
+      <a href="#next" class="button next"></a>
+    </div>
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
