--- a/app/index.html
+++ b/app/index.html
@@ -2,18 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>succulent</title>
-
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
   </head>
   <body>
-    <div class="content">
-      <a href="#prev" class="button prev"></a>
-      <a href="#next" class="button next"></a>
+    <div class="content"></div>
+    <div class="nav">
+      <a href="#prev" class="button prev fa fa-chevron-left"></a>
+      <a href="#next" class="button next fa fa-chevron-right"></a>
     </div>
 
     <!-- build:js scripts/main.js -->
