--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>succulent</title>
+    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
@@ -13,7 +14,7 @@
   <body>
     <div class="content"></div>
     <div class="nav">
-      <a href="#prev" class="button prev fa fa-chevron-left"></a>
+      <a href="#previous" class="button previous fa fa-chevron-left"></a>
       <a href="#next" class="button next fa fa-chevron-right"></a>
     </div>
 
