--- a/app/index.html
+++ b/app/index.html
@@ -14,12 +14,13 @@
   <body>
     <div class="content"></div>
     <div class="nav">
-      <a href="#previous" class="button previous fa fa-chevron-left"></a>
-      <a href="#next" class="button next fa fa-chevron-right"></a>
+      <a href="#previous" class="button button--previous fa fa-chevron-left"></a>
+      <a href="#next" class="button button--next fa fa-chevron-right"></a>
     </div>
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <script src="/node_modules/velocity-animate/velocity.js"></script>
     <!-- endbuild -->
 </body>
 </html>
