--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,8 @@
   <body>
     <div class="content"></div>
     <div class="nav">
-      <a href="#previous" class="button button--previous fa fa-chevron-left"></a>
-      <a href="#next" class="button button--next fa fa-chevron-right"></a>
+      <a href="/previous" class="button button--previous fa fa-chevron-left"></a>
+      <a href="/next" class="button button--next fa fa-chevron-right"></a>
     </div>
 
     <!-- build:js scripts/main.js -->
