--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<!doctype html> <html lang=en> <head> <meta charset=utf-8> <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> <title>Succulent</title> <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel=stylesheet type=text/css> <link rel=stylesheet href=http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css> <link rel=stylesheet href=styles/main.css> </head> <body> <div class=content></div> <div class=nav> <a href=#previous class="button button--previous fa fa-chevron-left"></a> <a href=#next class="button button--next fa fa-chevron-right"></a> </div> <script src=scripts/main.js></script> </body> </html> 
+<!doctype html> <html lang=en> <head> <meta charset=utf-8> <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"> <title>Succulent</title> <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700" rel=stylesheet type=text/css> <link rel=stylesheet href=http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css> <link rel=stylesheet href=styles/main.css> </head> <body> <div class=content></div> <div class=nav> <a href=#previous class="button button--previous fa fa-chevron-left"></a> <a href=#next class="button button--next fa fa-chevron-right"></a> </div> <script src=scripts/main.js></script> <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-62336402-1', 'auto');
+      ga('send', 'pageview');
+    </script> </body> </html> 
